--- a/ClockWork/client/events/event-feed/event-feed.html
+++ b/ClockWork/client/events/event-feed/event-feed.html
@@ -28,7 +28,7 @@
         </div>
     </ion-nav-buttons>
 
-    <ion-content class="padding">
+    <ion-content>
         <ion-list ng-repeat="event in EventFeed.events">
             <ion-item href="#/tab/event-detail/{{event._id}}">
                 <div class="row">
