--- a/ClockWork/client/tab/tab.html
+++ b/ClockWork/client/tab/tab.html
@@ -10,6 +10,10 @@ navigation to different views
     -CLAM
         -added expose-aside-when='large' attribute to keep side menu open on large devices ie. tablet or browser
 
+3/14/16
+    -CLAM
+        -added logout call to sidemenu currently uses onlick to do so, may move to controller
+
 -->
 <ion-side-menus enable-menu-with-back-views="false">
 
@@ -34,9 +38,10 @@ navigation to different views
         <ion-content>
             <ul class="list">
                 <!-- Note each link has the 'menu-close' attribute so the menu auto closes when clicking on one of these links -->
-                <a href="#/tab/home" class="item" menu-close>Home</a>
+                <a href="#/tab/event-feed" class="item" menu-close>Home</a>
                 <a href="#/tab/about" class="item" menu-close>About</a>
                 <a href="#/tab/contact" class="item" menu-close>Contact</a>
+                <a href="#/signin" onclick="Meteor.logout(function(){console.log(Meteor.user())});" class="item" menu-close>Sign Out</a>
             </ul>
         </ion-content>
     </ion-side-menu>
