Added ion icon map filter Added more options to add event modal

--- a/ClockWork/client/events/event-detail/event-detail.html
+++ b/ClockWork/client/events/event-detail/event-detail.html
@@ -33,6 +33,7 @@
             <p>{{EventDetail.event.owner}}</p>
         </div>
             <div>
+                <span>{{EventDetail.event.event_type}}</span>
                 <h2>{{EventDetail.event.title}}</h2>
 
                 <h3>{{EventDetail.event.time_expire | date:"short"}}</h3>
