--- a/ClockWork/client/tab/tab.html
+++ b/ClockWork/client/tab/tab.html
@@ -39,6 +39,7 @@ navigation to different views
             <ul class="list">
                 <!-- Note each link has the 'menu-close' attribute so the menu auto closes when clicking on one of these links -->
                 <a href="#/tab/event-feed" class="item" menu-close>Home</a>
+                <a href="#/tab/friends" class="item" menu-close>Friends</a>
                 <a href="#/tab/about" class="item" menu-close>About</a>
                 <a href="#/tab/contact" class="item" menu-close>Contact</a>
                 <a href="#/signin" onclick="Meteor.logout(function(){console.log(Meteor.user())});" class="item" menu-close>Sign Out</a>
