Eddited comments and add new validation using Cullin's css

--- a/ClockWork/client/modal/addEvent_modal.html
+++ b/ClockWork/client/modal/addEvent_modal.html
@@ -10,7 +10,7 @@
         - Updated Title
         - Removed 1 cap as option
      3/15/16 Son Nguyen
-        - Add ng-class from Cullin to make validation look prettier.
+        - Added ng-class from Cullin to make validation look prettier.
      3/14/16 C LAM
         - Added more options
 -->
