Added method call Attend which does update of event. Got attend function to work, made detail reactive, bunch of other stuff

--- a/ClockWork/client/login/login.html
+++ b/ClockWork/client/login/login.html
@@ -63,7 +63,7 @@ This file implements login view of our application.
                 <!--</div>-->
                 <!--<div class="form-error" ng-message="minlength">This field must be greater than 5 characters</div>-->
             <div class="padding">
-                <button ng-click="signin(user)" class="button button-block button-positive">
+                <button ng-click="Login.signin(user)" class="button button-block button-positive">
                     Sign-In
                 </button>
                 <p class="text-center">
