--- a/ClockWork/client/events/event-detail/event-detail.html
+++ b/ClockWork/client/events/event-detail/event-detail.html
@@ -25,6 +25,8 @@
     -3/5/16
         -CLam
             -updated view-title
+    -3/18/16
+        -Clam - added leave call
 -->
 
 <ion-view view-title="Detail">
@@ -38,7 +40,7 @@
                 <h2>{{EventDetail.event.title}}</h2>
 
                 <h3>{{EventDetail.event.time_expire | date:"short"}}</h3>
-                <!--<countdown-timer></countdown-timer>-->
+                <countdown-timer></countdown-timer>
 
                 <p>{{EventDetail.event.description}}</p>
             </div>
@@ -46,8 +48,11 @@
                 <h2 ng-hide="EventDetail.hide">{{EventDetail.event.cap - EventDetail.event.fill}} spots remaining!</h2>
             </div>
         </div>
-        <button ng-click="EventDetail.attend()" class="button button-medium button-royal">
+        <button ng-click="EventDetail.attend()" class="button button-medium button-royal" ng-hide="EventDetail.hide_attend">
             Attend
+        </button>
+        <button ng-click="EventDetail.leave()" class="button button-medium button-royal" ng-hide="EventDetail.hide_leave">
+            Leave
         </button>
         <ion-list>
             <ion-item ng-repeat="user in EventDetail.event.attendees">
