Cleaned up code, fixed event feed issue by clearing cache on logout. Added documentation. Added inline style for black text for countdown timer and event detail (white on white issue)

--- a/ClockWork/client/events/event-detail/event-detail.html
+++ b/ClockWork/client/events/event-detail/event-detail.html
@@ -27,11 +27,12 @@
             -updated view-title
     -3/18/16
         -Clam - added leave call
+        Added inline style to force black text
 -->
 
 <ion-view view-title="Detail">
-    <ion-content class="padding" style="background-image: url(http://www.crafthubs.com/thumbs/coffee-doodle-wallpaper.jpg)">
-        <div class="card">
+    <ion-content class="padding">
+        <div class="card" style="color: #111111">
             <div>
             <p>{{EventDetail.event.owner}}</p>
         </div>
