--- a/ClockWork/client/tab/tab.html
+++ b/ClockWork/client/tab/tab.html
@@ -44,7 +44,7 @@ navigation to different views
                 <a href="#/tab/event-feed" class="item" menu-close>Home</a>
                 <a href="#/tab/about" class="item" menu-close>About</a>
                 <a href="#/tab/contact" class="item" menu-close>Contact</a>
-                <a href="#/tab/notifications" class="item" menu-close>Notifications</a>
+                <a href="#/tab/notifications" class="item" menu-close>Notifications<notif-badge></notif-badge></a>
                 <a ng-controller="logoutCtrl" ng-click="logout()" class="item" menu-close>Sign Out</a>
             </ul>
         </ion-content>
