--- a/ClockWork/client/tab/tab.html
+++ b/ClockWork/client/tab/tab.html
@@ -35,7 +35,7 @@ navigation to different views
     </ion-side-menu-content>
 
     <ion-side-menu side="left" expose-aside-when="large">
-        <ion-header-bar class="bar-assertive">
+        <ion-header-bar class="bar">
             <h1 class="title">Left Menu</h1>
         </ion-header-bar>
         <ion-content>
