--- a/ClockWork/client/events/event-feed/event-feed.html
+++ b/ClockWork/client/events/event-feed/event-feed.html
@@ -34,37 +34,27 @@
 
     <ion-content>
 
-        <ion-list>
-            <label class="item item-input">
-                <i class="icon ion-search placeholder-icon"></i>
-                <input type="text" placeholder="Search" ng-model="searchBox">
-            </label>
-        </ion-list>
-
-        <ion-list ng-repeat="event in EventFeed.events | filter: searchBox">
+        <ion-list ng-repeat="event in EventFeed.events">
             <ion-item href="#/tab/event-detail/{{event._id}}">
                 <div class="row">
                     <div class="col col-10">
-                        <i class="icon icon-left {{event.event_type | icon}}" style="font-size: xx-large"></i>
+                        <br><i class="icon icon-left {{event.event_type | icon}}" style="font-size: xx-large; text-align: center;"></i>
                     </div>
                     <div class="col col-33 item-text-wrap">
+                        <br>
                         <h2>{{event.title}}</h2>
                         <h3>{{event.owner}}</h3>
                     </div>
                     <div class="col col-33">
-
+                        <br>
                         <i class="icon ion-android-alarm-clock" style="font-size: x-large"></i>
                         <countdown-timer></countdown-timer>
                     </div>
                     <div class="col col-20">
+                        <br>
                         <i class="icon ion-person-stalker" style="font-size: x-large"></i>
-
                         <h2>{{event.fill}}/{{event.cap}}</h2>
                     </div>
-                    <div class="col">
-                        <i class="ion-chevron-right"></i>
-                    </div>
-
                     <ion-option-button class="button-assertive" ng-click="EventFeed.removeEvent(event)">
                         Delete
                     </ion-option-button>
