--- a/ClockWork/client/events/event-feed/event-feed.html
+++ b/ClockWork/client/events/event-feed/event-feed.html
@@ -37,22 +37,22 @@
         <ion-list ng-repeat="event in EventFeed.events">
             <ion-item href="#/tab/event-detail/{{event._id}}">
                 <div class="row">
-                    <div class="col col-10">
-                        <br><i class="icon icon-left {{event.event_type | icon}}" style="font-size: xx-large; text-align: center;"></i>
+                    <div class="col col-33">
+                        <br><br><i class="icon icon-left {{event.event_type | icon}}" style="font-size: -webkit-xxx-large;"></i>
                     </div>
-                    <div class="col col-33 item-text-wrap">
-                        <br>
+                    <div class="col item-text-wrap">
+
                         <h2>{{event.title}}</h2>
                         <h3>{{event.owner}}</h3>
+
+                        <div class="row" >
+                            <div class="col col-10"><i class="icon ion-android-alarm-clock"></i></div>
+                            <div class="col"><countdown-timer></countdown-timer></div>
+                        </div>
+
                     </div>
-                    <div class="col col-33">
-                        <br>
-                        <i class="icon ion-android-alarm-clock" style="font-size: x-large"></i>
-                        <countdown-timer></countdown-timer>
-                    </div>
-                    <div class="col col-20">
-                        <br>
-                        <i class="icon ion-person-stalker" style="font-size: x-large"></i>
+                    <div class="col">
+                        <i class="icon ion-person-stalker"></i>
                         <h2>{{event.fill}}/{{event.cap}}</h2>
                     </div>
                     <ion-option-button class="button-assertive" ng-click="EventFeed.removeEvent(event)">
