--- a/ClockWork/client/events/event-feed/event-feed.html
+++ b/ClockWork/client/events/event-feed/event-feed.html
@@ -40,7 +40,7 @@
                     <div class="col col-33">
                         <br><br><i class="icon icon-left {{event.event_type | icon}}" style="font-size: -webkit-xxx-large;"></i>
                     </div>
-                    <div class="col item-text-wrap">
+                    <div class="item-text-wrap">
 
                         <h2>{{event.title}}</h2>
                         <h3>{{event.owner}}</h3>
@@ -48,13 +48,15 @@
                         <div class="row" >
                             <div class="col col-10"><i class="icon ion-android-alarm-clock"></i></div>
                             <div class="col"><countdown-timer></countdown-timer></div>
+                            <i class="icon ion-person-stalker"></i>
+                            <h2>{{event.fill}}/{{event.cap}}</h2>
                         </div>
 
                     </div>
-                    <div class="col">
-                        <i class="icon ion-person-stalker"></i>
-                        <h2>{{event.fill}}/{{event.cap}}</h2>
-                    </div>
+                    <!--<div class="col">-->
+                        <!--<i class="icon ion-person-stalker"></i>-->
+                        <!--<h2>{{event.fill}}/{{event.cap}}</h2>-->
+                    <!--</div>-->
                     <ion-option-button class="button-assertive" ng-click="EventFeed.removeEvent(event)">
                         Delete
                     </ion-option-button>
