--- a/ClockWork/client/events/event-detail/event-detail.html
+++ b/ClockWork/client/events/event-detail/event-detail.html
@@ -56,6 +56,7 @@
             Leave
         </button>
         <ion-list>
+            <ion-item class="item-divider">Attending</ion-item>
             <ion-item ng-repeat="user in EventDetail.event.attendees">
                 {{user}}
             </ion-item>
