--- a/ClockWork/client/events/event-feed/event-feed.html
+++ b/ClockWork/client/events/event-feed/event-feed.html
@@ -41,14 +41,17 @@
                         <br><br><i class="icon icon-left {{event.event_type | icon}}" style="font-size: -webkit-xxx-large;"></i>
                     </div>
                     <div class="col item-text-wrap">
-
+                        <br>
                         <h2>{{event.title}}</h2>
 
-                        <i class="icon ion-person-stalker"></i>
-                        <h3>{{event.fill}}/{{event.cap}}</h3>
                         <div class="row">
-                            <div class="col col-10"><i class="icon ion-android-alarm-clock"></i></div>
-                            <div class="col"><countdown-timer></countdown-timer></div>
+                            <div><i class="icon ion-person-stalker"></i></div>
+                            <div><h3>{{event.fill}}/{{event.cap}}</h3></div>
+                        </div>
+
+                        <div class="row">
+                            <div><i class="icon ion-android-alarm-clock"></i></div>
+                            <div><countdown-timer></countdown-timer></div>
                         </div>
                     </div>
 
