--- a/ClockWork/client/tab/tab.html
+++ b/ClockWork/client/tab/tab.html
@@ -36,12 +36,13 @@ navigation to different views
 
     <ion-side-menu side="left" expose-aside-when="large">
         <ion-header-bar class="bar">
-            <h1 class="title">Left Menu</h1>
+            <h1 class="title">ClockWork</h1>
         </ion-header-bar>
         <ion-content>
             <ul class="list">
                 <!-- Note each link has the 'menu-close' attribute so the menu auto closes when clicking on one of these links -->
                 <a href="#/tab/event-feed" class="item" menu-close>Home</a>
+                <a ng-controller="gotoProfileCtrl" href="#/tab/profile/{{username}}" class="item" menu-close>Profile</a>
                 <a href="#/tab/about" class="item" menu-close>About</a>
                 <a href="#/tab/contact" class="item" menu-close>Contact</a>
                 <a href="#/tab/notifications" class="item" menu-close>Notifications<notif-badge></notif-badge></a>
