--- a/ClockWork/client/events/event-detail/event-detail.html
+++ b/ClockWork/client/events/event-detail/event-detail.html
@@ -34,8 +34,8 @@
     <ion-content class="padding">
         <div class="card" style="color: #111111">
             <div>
-            <p>{{EventDetail.event.owner}}</p>
-        </div>
+                <p>{{EventDetail.event.owner}}</p>
+            </div>
             <div>
                 <span>{{EventDetail.event.event_type}}</span>
                 <h2>{{EventDetail.event.title}}</h2>
@@ -56,6 +56,7 @@
             Leave
         </button>
         <ion-list>
+            <ion-item class="item-divider">Attending</ion-item>
             <ion-item ng-repeat="user in EventDetail.event.attendees">
                 {{user}}
             </ion-item>
