--- a/ClockWork/client/modal/addEvent_modal.html
+++ b/ClockWork/client/modal/addEvent_modal.html
@@ -89,7 +89,7 @@
 
                 <ionic-timepicker input-obj="addEvent.timePickerObject" name="eventTime" required>
                     <button type="button" class="button button-dark button-block">
-                        <standard-time-meridian etime='addEvent.timePickerObject.inputEpochTime'>Pick Time</standard-time-meridian>
+                        <standard-time-meridian etime='addEvent.timePickerObject.inputEpochTime'>Set Countdown Duration</standard-time-meridian>
                     </button>
                 </ionic-timepicker>
                 <span style="color:red" ng-show="addEvent.checkTime()">Please select time</span>
