--- a/ClockWork/client/events/event-detail/event-detail.html
+++ b/ClockWork/client/events/event-detail/event-detail.html
@@ -57,8 +57,8 @@
         </button>
         <ion-list>
             <ion-item class="item-divider">Attending</ion-item>
-            <ion-item ng-repeat="user in EventDetail.event.attendees">
-                {{user}}
+            <ion-item ng-controller="gotoProfileCtrl" ng-repeat="user in EventDetail.event.attendees">
+                <div ng-click="goToProfile({{user}})">{{user}}</div>
             </ion-item>
         </ion-list>
         <div>
