fixed title for time

--- a/ClockWork/client/events/event-detail/event-detail.html
+++ b/ClockWork/client/events/event-detail/event-detail.html
@@ -52,7 +52,7 @@
         </div>
         <div class="card">
             <div class="item item-divider">
-                Time of Event and Attend Countdown
+                Event Expiration Time & Attend Countdown
             </div>
             <div class="item item-text-wrap">
                 <h3>{{EventDetail.event.time_expire | date:"short"}}</h3>
