--- a/ClockWork/client/events/event-detail/event-detail.html
+++ b/ClockWork/client/events/event-detail/event-detail.html
@@ -34,7 +34,7 @@
             -(Owner,Event type),(Time of event,countdown,location,description),
             (Remaning spots,attending)
 -->
-<ion-view view-title="Detail" style="background-color:#FFAEAE;">
+<ion-view view-title="{{EventDetail.event.title}}" style="background-color:#FFAEAE;">
     <ion-content class="padding">
         <div class="card">
             <div class="item item-divider">
